Fix container alignment

--- a/public/blocking.css
+++ b/public/blocking.css
@@ -1,4 +1,5 @@
 html, body {
+    height: 100%;
     min-height: 100%;
 }
 
